# ge-agent-factory

./: .dockerignore  .env.example  .gcloudignore  .ge.schema.json  .gitattributes  .gitignore  .mcp.json  .oxlintrc.json  AGENTS.md  CONTRIBUTING.md  GEMINI.md  Makefile  README.md  REFACTOR-HANDOFF.md  SETUP.md  agents-batch.json  bunfig.test-preload.mjs  bunfig.toml  cloudbuild.ci.yaml  cloudbuild.yaml  ge.byo.example.yaml  ge.manifest.example.json  ge.manifest.schema.json  gemini-extension.json  metadata.json  mise.toml  nginx.conf  package.json
apps/factory/mcp-service/: Dockerfile  cloudbuild.yaml  pyproject.toml  server.py  synthesis.py  synthesis_contract.py  synthesis_naming.py  synthesis_orchestrate.py  synthesis_seed.py  synthesis_sketch.py  synthesis_validation.py  synthesize_cli.py  test_synthesis.py  test_synthesis_golden.py
apps/factory/mcp-service/tests/: test_mutation_annotations.py
apps/factory/mcp-service/tools/: validate_seed_schema.py
generated-agents/ad-hoc-query-agent/: agents-cli-manifest.yaml  pyproject.toml
generated-agents/ad-hoc-query-agent/app/: agent.py  tools.py
generated-agents/ad-hoc-query-agent/evals/: golden.json
generated-agents/ad-hoc-query-agent/fixtures/: manifest.json
generated-agents/ad-hoc-query-agent/fixtures/documents/: ad-hoc-query-agent-controls-playbook.md
generated-agents/ad-hoc-query-agent/fixtures/tables/: analytics_events.csv  analytics_events.json  (+16 more)
generated-agents/ad-hoc-query-agent/mock_systems/: pipeline.json  schema.json  usecase-spec.json
generated-agents/ad-hoc-query-agent/tests/: test_smoke.py
(+29883 files in other folders)
